# linglong

./: CMakeLists.txt
api/dbus/: org.deepin.linglong.PackageManager1.xml
api/schema/: v1.yaml
apps/ll-builder/src/: main.cpp
apps/ll-package-manager/src/: main.cpp
debian/: linglong-bin.install  linglong-bin.postinst  linglong-box.postinst  linglong-builder.install  rules
libs/linglong/src/linglong/cli/: cli.cpp
libs/linglong/src/linglong/package_manager/: package_manager.cpp
libs/linglong/src/linglong/repo/: ostree_repo.cpp  ostree_repo.h
libs/linglong/src/linglong/runtime/: container_builder.cpp  container_builder.h  container_option.cpp  container_option.h  develop_module_policy.cpp  develop_module_policy.h  language_module_policy.cpp  language_module_policy.h  module_list_generator.cpp  module_list_generator.h  module_policy.cpp  module_policy.h
misc/: CMakeLists.txt
misc/lib/: CMakeLists.txt
misc/lib/linglong/container/: README.md
misc/lib/linglong/container/config.d/: 10-basics.json  20-devices.cpp  20-host.json  30-certs.json  30-fonts.json  30-host-ipc.cpp  30-icons.json  30-machine-id.json  30-themes.json  40-xdg-runtime-dir.cpp
src/linglong/api/types/: helper.h
src/linglong/api/types/v1/: BuilderConfig.hpp  BuilderProjectPackage.hpp  BuilderProjectSource.hpp  Generators.hpp  LinglongAPIV1.hpp  PackageManager1Package.hpp  PackageManager1QueryParameters.hpp  PackageManager1QueryResult.hpp
src/linglong/builder/: config.cpp  config.h  depend_fetcher.h  linglong_builder.cpp  linglong_builder.h  source_fetcher.cpp  source_fetcher.h
src/linglong/cli/: cli.cpp  cli.h  json_printer.cpp  json_printer.h  printer.cpp  printer.h
src/linglong/package/: fuzz_reference.cpp  layer_dir.cpp  layer_dir.h  layer_packager.cpp  layer_packager.h
src/linglong/package_manager/: package_manager.cpp  package_manager.h
src/linglong/repo/: ostree_repo.cpp  ostree_repo.h  repo.h  repo_client.cpp  repo_client.h
src/linglong/runtime/: app.cpp  app.h  app_config.cpp  app_config.h  container.cpp  container.h  container_builder.cpp  container_builder.h  oci.h
src/linglong/service/: app_manager.h
src/linglong/system_helper/privilege/: privilege_install_portal.cpp  privilege_install_portal.h
src/linglong/util/: app_status.h  configure.h.in
src/linglong/util/oci/: distribution_client.cpp  distribution_client.h
src/linglong/utils/serialize/: json.h  yaml.h
tests/: CMakeLists.txt
tests/src/module/runtime/: app_test.cpp
tests/src/module/util/oci/: distribution_test.cpp
